# PythonWEB_hw7

./: config.ini  fill_db.py  main.py  pyproject.toml
conf/: db.py  models.py
migrations/versions/: 262261fb3ee5_init.py
